<resources>
    <string name="PLAY_CONSOLE_PUBLIC_KEY">SWYgeW91IGFyZSBsb29raW5nIGZvciByYW5zb20sIEkgY2FuIHRlbGwgeW91IEkgZG9uJ3QgaGF2ZSBtb25leS4gQnV0IHdoYXQgSSBkbyBoYXZlIGFyZSBhIHZlcnkgcGFydGljdWxhciBzZXQgb2Ygc2tpbGxzLCBza2lsbHMgSSBoYXZlIGFjcXVpcmVkIG92ZXIgYSB2ZXJ5IGxvbmcgY2FyZWVyLCBza2lsbHMgdGhhdCBtYWtlIG1lIGEgbmlnaHRtYXJlIGZvciBwZW9wbGUgbGlrZSB5b3UuIElmIHlvdSBsZXQgbXkgYXBwIGdvIG5vdywgdGhhdCdsbCBiZSB0aGUgZW5kIG9mIGl0Lg==</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_input_auto">Auto</string>
    <string name="action_input_bluetooth_auto">Bluetooth microphone - Make available</string>
    <string name="action_input_bluetooth_mic_record_with_bluetooth_output">Bluetooth microphone - Force active</string>
    <string name="action_input_headset_mic">Headset microphone</string>
    <string name="action_input_internal_mic">Internal microphone</string>
    <string name="action_input_leave_alone">Leave unchanged</string>
    <string name="action_input_usb_mic">USB microphone</string>
    <string name="action_output_bluetooth">@string/status_output_bluetooth</string>
    <string name="action_output_cast">@string/status_output_cast</string>
    <string name="action_output_default">Do nothing</string>
    <string name="action_output_earpiece">@string/status_output_earpiece</string>
    <string name="action_output_headphones">@string/status_output_headphone</string>
    <string name="action_output_headset">@string/status_output_headset</string>
    <string name="action_output_mute">Mute</string>
    <string name="action_output_short_mute">@string/action_output_mute</string>
    <string name="action_output_short_unmute">@string/action_output_unmute</string>
    <string name="action_output_speaker">@string/status_output_speaker</string>
    <string name="action_output_unmute">Unmute</string>
    <string name="action_output_usb">@string/status_output_usb</string>
    <string name="app_name">Lesser AudioSwitch</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_config_activity_title">Configure Auto-Switch</string>
    <string name="auto_disable_when_temp_unlocked_warning">Auto-switch is now a premium feature.\10If you disable it now, you will not be able to enable it again unless premium is purchased.</string>
    <string name="auto_disable_when_temp_unlocked_warning_ok_button">Disable anyway</string>
    <string name="auto_mode_auto">Auto</string>
    <string name="auto_mode_manual">Manual</string>
    <string name="auto_mode_restore_on_boot">Restore on boot</string>
    <string name="auto_text_event">event</string>
    <string name="auto_text_first_enable_warning">Please ensure that the app is allowed to auto-start if you restart your device. You may have to disable battery optimization for this app, or enable auto-start in App Info.\10\10If the app is unable to auto-start, auto-switch will not resume until the app is manually opened.</string>
    <string name="auto_text_on_connect">On connect</string>
    <string name="auto_text_on_disconnect">On disconnect</string>
    <string name="auto_text_pick_action">Pick an action</string>
    <string name="auto_text_restore_on_boot_pick_action_details">This output will be enabled when the device starts</string>
    <string name="auto_text_support_not_enabled_suffix">Support not enabled</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_done">Done</string>
    <string name="button_hide">Hide</string>
    <string name="button_understood">Understood</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="config_headphone_headset_3_pole">3-pole ( no microphone )</string>
    <string name="config_headphone_headset_4_pole">4-pole ( with microphone )</string>
    <string name="config_headphone_prong_message">If your headphone jack is damaged and cannot detect the correct type, you may want to manually configure it here.</string>
    <string name="config_headphone_prong_title">Configure connector type</string>
    <string name="config_message_disable_internal_mic_maybe_required">Some apps may choose not to utilize the below microphones with this output unless [ Disable internal microphone ] is enabled in the settings.</string>
    <string name="config_message_mute_speaker_not_available">Muting the speaker would prevent sounds from playing via the speaker when using headphones. This feature is not available on most devices running Android 9.0 and later, including this one.</string>
    <string name="config_title_mute_speaker_not_available">Mute speaker not available</string>
    <string name="debug_menu_devices">Devices</string>
    <string name="debug_menu_force">Force</string>
    <string name="debug_menu_input">Input</string>
    <string name="debug_menu_output">Output</string>
    <string name="debug_menu_streams">Streams</string>
    <string name="pie_addressable_override_mode_addressable">Mutable</string>
    <string name="pie_addressable_override_mode_auto">Auto</string>
    <string name="pie_addressable_override_mode_normal">Not mutable</string>
    <string name="pie_addressable_override_status_message">Detected:</string>
    <string name="pref_description_bluetooth_mode">Enable support for Bluetooth devices</string>
    <string name="pref_description_cast_mode">Enable support for switching casted audio</string>
    <string name="pref_description_disable_earpiece">Switching to speakers will disable the earpiece, forcing all audio to use the louder, main speaker.</string>
    <string name="pref_description_disable_internal_mic">Completely disable the internal microphone when switching to other inputs. Some apps may not use the desired microphone without this enabled.</string>
    <string name="pref_description_display_mute_unmute_buttons">Display the mute/unmute buttons</string>
    <string name="pref_description_force_mic">Enable switching the microphone input</string>
    <string name="pref_description_monitor_speaker_mute_state">Display warning notification if speaker is unexpectedly re-enabled</string>
    <string name="pref_description_mute_speaker">Switching to headphones will disable the main speaker, muting notifications, alarms, and other loud sounds.</string>
    <string name="pref_description_notification">Display notification</string>
    <string name="pref_description_prevent_accidental_disconnect">A damaged headphone jack may cause headphonese to disconnect on their own.\10Enable this to prevent them from being disconnected unless you manually switch to another output.</string>
    <string name="pref_description_usb_mode">Enable support for USB devices</string>
    <string name="pref_key_advanced_button">pref_advanced_button</string>
    <string name="pref_key_bluetooth_mode">pref_bluetooth_mode</string>
    <string name="pref_key_cast_mode">pref_cast_mode</string>
    <string name="pref_key_debug_button">pref_debug_button</string>
    <string name="pref_key_disable_earpiece">pref_disable_earpiece</string>
    <string name="pref_key_disable_internal_mic">pref_disable_internal_mic</string>
    <string name="pref_key_display_mute_unmute_buttons">pref_display_mute_unmute_buttons</string>
    <string name="pref_key_event_log_button">pref_event_log_button</string>
    <string name="pref_key_force_mic">pref_force_mic</string>
    <string name="pref_key_monitor_speaker_mute_state">pref_monitor_speaker_mute_state</string>
    <string name="pref_key_mute_speaker">pref_mute_speaker</string>
    <string name="pref_key_notification">pref_notification_bar</string>
    <string name="pref_key_override_pie_version_addressable">pref_override_pie_version_addressable</string>
    <string name="pref_key_usb_mode">pref_usb_mode</string>
    <string name="pref_title_advanced_button">Advanced</string>
    <string name="pref_title_bluetooth_mode">Bluetooth support</string>
    <string name="pref_title_cast_mode">Casting support</string>
    <string name="pref_title_debug_button">Debug</string>
    <string name="pref_title_disable_earpiece">Disable earpiece</string>
    <string name="pref_title_disable_internal_mic">Disable internal microphone</string>
    <string name="pref_title_display_mute_unmute_buttons">Display mute/unmute</string>
    <string name="pref_title_force_mic">Switch microphone</string>
    <string name="pref_title_monitor_speaker_mute_state">Monitor speaker mute</string>
    <string name="pref_title_mute_speaker">Mute Speaker</string>
    <string name="pref_title_notification">Notification</string>
    <string name="pref_title_override_pie_version_addressable">Mutable speaker override</string>
    <string name="pref_title_prevent_accidental_disconnect">Prevent accidental disconnect</string>
    <string name="pref_title_usb_mode">USB support</string>
    <string name="title_event_log">Event Log</string>
    <string name="warning_bluetooth_configured_input_only_used_if_no_bt_mic">The below cannot be used during cellular calls.\10Enable beforehand when using other voice-call apps.</string>
    <string name="warning_compatibility_dialog_message_part_1">Due to changes made to Android by this manufacturer, control of wired devices ( USB, headphone jack ) is limited on this device.</string>
    <string name="warning_compatibility_dialog_message_part_2">Wired devices can be enabled, but not disabled. This means you can switch to headphones, but not disable them to switch back to the speaker.</string>
    <string name="warning_compatibility_dialog_message_part_3">You will instead have to restart your device to undo the changes made by this app. Bluetooth devices are unaffected.</string>
</resources>