<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <Preference android:title="@string/pref_title_debug_button" android:key="@string/pref_key_debug_button"/>
    <Preference android:title="@string/title_event_log" android:key="@string/pref_key_event_log_button"/>
    <Preference android:title="@string/pref_title_override_pie_version_addressable" android:key="@string/pref_key_override_pie_version_addressable"/>
    <com.nordskog.LesserAudioSwitch.util.LineBreakCheckboxPreference android:title="@string/pref_title_monitor_speaker_mute_state" android:key="@string/pref_key_monitor_speaker_mute_state" android:summary="@string/pref_description_monitor_speaker_mute_state" android:defaultValue="false"/>
</PreferenceScreen>
