<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/settings_activity_fragment_container" android:background="?android:attr/colorBackground" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/output_devices_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/debug_menu_output" android:layout_weight="1"/>
        <Button android:id="@+id/input_devices_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/debug_menu_input" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/devices_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/debug_menu_devices" android:layout_weight="1"/>
        <Button android:id="@+id/force_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/debug_menu_force" android:layout_weight="1"/>
        <Button android:id="@+id/streams_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/debug_menu_streams" android:layout_weight="1"/>
    </LinearLayout>
    <HorizontalScrollView android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@+id/debug_results" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textIsSelectable="true"/>
    </HorizontalScrollView>
</LinearLayout>
