<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/radio_group" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:id="@+id/checkboxMuteSpeakerContainer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
            <ImageView android:layout_gravity="top|center_vertical|center_horizontal|center" android:layout_width="36dp" android:layout_height="wrap_content" app:srcCompat="@drawable/switch_vector_boring_mute"/>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@+id/checkboxMuteSpeaker" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pref_title_mute_speaker"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_description_mute_speaker"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@+id/checkboxCannotMuteSpeakerContainer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
            <ImageView android:layout_gravity="top|center_vertical|center_horizontal|center" android:layout_width="36dp" android:layout_height="wrap_content" app:srcCompat="@drawable/switch_vector_boring_mute"/>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <CheckBox android:enabled="false" android:id="@+id/checkboxCannotMuteSpeaker" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/config_title_mute_speaker_not_available"/>
                <TextView android:enabled="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/config_message_mute_speaker_not_available"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@+id/checkboxDisableEarpieceContainer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
            <ImageView android:layout_gravity="top|center_vertical|center_horizontal|center" android:layout_width="36dp" android:layout_height="wrap_content" app:srcCompat="@drawable/config_vector_boring_earpiece_mute"/>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@+id/checkboxDisableEarpiece" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pref_title_disable_earpiece"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_description_disable_earpiece"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
