<?xml version="1.0" encoding="utf-8"?>
<com.nordskog.LesserAudioSwitch.p002ui.BoundedLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" app:bounded_width="500dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:layout_gravity="center" android:id="@+id/auto_mode_manual_button" android:background="@drawable/mode_select_button_background_left" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/auto_mode_manual" android:layout_weight="0.5"/>
        <Button android:layout_gravity="center" android:id="@+id/auto_mode_restore_on_boot_button" android:background="@drawable/mode_select_button_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/auto_mode_restore_on_boot" android:layout_weight="0.3"/>
        <Button android:layout_gravity="center" android:id="@+id/auto_mode_auto_button" android:background="@drawable/mode_select_button_background_right" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/auto_mode_auto" android:layout_weight="0.5"/>
    </LinearLayout>
</com.nordskog.LesserAudioSwitch.p002ui.BoundedLinearLayout>
